<resources>
    <string name="app_name">My Application2</string>
    <string name="loginTitle">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="submitLoginBtn">Entrar</string>
    <string name="forgot_password">Esqueci a minha senha</string>
    <string name="register_link">Criar uma conta</string>
    <string name="registerTitle">Criar conta</string>
    <string name="passwordConfirm">Confirmar senha</string>
    <string name="submitRegisterBtn">Criar conta</string>
    <string name="login_link">Entrar</string>
    <string name="forgotPasswordBtn">Recuperar senha</string>
    <string name="forgotPasswordTitle">Recuperar Senha</string>
    <string name="home">Início</string>
    <string name="save">Salvar</string>
    <string name="task_title">Nova Tarefa</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="date">Data</string>
    <string name="time">Hora</string>
    <string name="profile">Perfil</string>
    <string name="name">Nome</string>
    <string name="username">Usuário</string>
    <string name="submit_forgot_password_btn">Recuperar senha</string>
    <string name="login_title">Login</string>
    <string name="submit_login_btn">Entrar</string>
    <string name="register_title">Cadastrar Usuário</string>
    <string name="submit_register_btn">Cadastrar</string>
    <string name="forgot_password_title">Recuperar Senha</string>
</resources>