<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_gravity="center" />

        <!-- Título -->
        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_marginTop="20dp" />

        <!-- Campos de entrada -->
        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/passwordConfirmInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordConfirm"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginTop="20dp" />

        <!-- Esqueci minha senha -->
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/forgot_password"
            android:layout_marginTop="10dp" />

        <!-- Botão de registro -->
        <Button
            android:id="@+id/submitRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_register_btn"
            android:layout_marginTop="20dp" />

        <!-- Login -->
        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/login_link"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
